[package]
name = "rnav-alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.20.0"
geo-types = "0.7.4"
dialoguer = "0.10.0"
csv = "1.1.6"
serde = {version = "1.0.117", features = ["derive"]}
configparser = "3.0.0"
dirs = "4.0.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"